--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: main # Branch where content changes will be committed
+  branch: master # Branch where content changes will be committed
 
 media_folder: "static/images/uploads" # Folder where images will be stored
 public_folder: "/images/uploads"      # Public path to those images
