--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: main  # or "master" depending on your default branch
+  branch: master  # or "master" depending on your default branch
 
 media_folder: "static/images/uploads"  # Where uploaded files will be stored in your repo
 public_folder: "/images/uploads"  # Public URL for the uploaded files
